# Joggernaut

./: README.md
back-end/: .coverage  .gitignore  README.md  pyproject.toml
back-end/api/: admin.py  forms.py  helper.py  models.py  permissions.py  responses.py  schema_docs.py  serializers.py  urls.py  validators.py  views.py
back-end/api/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_firstname_and_more.py  0003_alter_user_managers_remove_user_first_name_and_more.py  0004_remove_user_username.py  0005_remove_user_date_joined_alter_user_phonenumber.py  0006_alter_userprofiles_accountname.py  0007_alter_user_options_alter_useractivity_options_and_more.py  0008_remove_usersettings_settingid_and_more.py  0009_alter_user_userid.py  0010_alter_user_phonenumber.py  0011_friendtable.py  0012_alter_friendtable_status.py  0013_alter_friendtable_creationdate_and_more.py  0013_workoutrecord_delete_useractivity.py  0013_workoutrecord_delete_useractivity_and_more.py  0014_alter_friendtable_creationdate_and_more.py  0014_alter_friendtable_fromuserid_and_more.py  0014_alter_workoutrecord_options_workoutrecord_calories_and_more.py  0015_alter_friendactivity_options_and_more.py  0015_alter_workoutrecord_table.py  0016_friendtable_two_way_friendship_and_more.py  0017_friendactivity_accept_friendactivity_acceptdate.py  0018_remove_friendactivity_accept_and_more.py  0019_passwordresettoken.py  0020_gameachievement_gameenemy_gamesave_gamecharacter_and_more.py  0021_alter_gameenemy_options_gamecharacter_selected_and_more.py  0022_gamecharacter_unique_selected_per_gamesave.py  0023_remove_gamecharacter_color_hex_and_more.py  0024_remove_gamecharacter_class_gamecharacter_type.py  0025_alter_gamecharacter_name.py  0026_remove_workoutrecord_non_zero_calories_or_steps.py  0027_alter_friendactivity_status.py  0028_usersettings_in_leaderboards_and_more.py  0029_remove_userprofiles_address_and_more.py  0030_gamesave_attempts_lifetime.py
back-end/api/models/: __init__.py  auth.py  friends.py  game.py  user.py  workout.py
back-end/api/serializers/: __init__.py  activity.py  auth.py  friends.py  game.py  general.py  leaderboards.py  token.py  user.py  workout.py  (+1 more)
back-end/conf/: .env  mysql.conf
back-end/django_backend/: settings.py  urls.py
back-end/src/: main.py  settings.py
back-end/tests/: test_views.py
(+157 files in other folders)
