[tool.poetry]
name = "cs192-joggernaut-backend"
version = "0.1.0"
description = ""
authors = ["Enduro Team"]
license = "GNU General Public License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
