[tool.poetry]
name = "cs192-joggernaut-backend"
version = "0.1.0"
description = ""
authors = ["Enduro Team"]
license = "GNU General Public License"
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.5"
djangorestframework = "^3.15.2"
mysqlclient = "^2.2.7"
djangorestframework-types = "^0.9.0"
tzdata = "^2025.1"
pytz = "^2025.1"
django-oauth-toolkit = "^3.0.1"
drf-spectacular = {extras = ["sidecar"], version = "^0.28.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
