[tool.poetry]
name = "cs192-joggernaut-backend"
version = "0.3.0"
description = ""
authors = ["Enduro Team"]
license = "GNU General Public License"
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.5"
djangorestframework = "^3.15.2"
mysqlclient = "^2.2.7"
djangorestframework-types = "^0.9.0"
tzdata = "^2025.1"
pytz = "^2025.1"
django-oauth-toolkit = "^3.0.1"
drf-spectacular = {extras = ["sidecar"], version = "^0.28.0"}
uvicorn = "^0.34.0"
ruff = "^0.11.2"
python-dotenv = "^1.0.1"
tblib = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)
select = ["E", "F", "W"]
ignore = ["E501"]
extend-select = ["F403"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"